# nano-deepseek

./: .gitignore  deepseek-research.txt  equations.tex  fixes-6.txt  fixes.txt  markdown  monte_carlo_circuit.py  predict.py  probabilistic_layer.py  pyproject.toml  quantum_circuit.py  quantum_experiment.py  quantum_experiment_real.py  quantum_interface.py  quantum_layer.py  quantum_network.py  quantum_optimizer.py  references.bib  stochastic_optimizer.py  train.py
data/openwebtext/: prepare.py
docs/: README.md  configuration.md  getting_started.md  hardware_requirements.md  training_guide.md  troubleshooting.md
