[project]
name = "nano-deepseek"
version = "0.1.0"
description = "a repo exploring a nano deepseek"
authors = [
    {name = "James Munsch", email = "james.a.munsch@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "filelock==3.17.0",
    "fsspec==2024.12.0",
    "idna==3.10",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "pillow==11.1.0",
    "pip==24.2",
    "pyproject-freeze==0.1.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "sympy==1.13.1",
    "tiktoken==0.8.0",
    "tomlkit==0.13.2",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "triton==3.2.0",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
